opam-version: "1.2"
version: "0.5.0"

maintainer: "Anton Bachin <antonbachin@yahoo.com>"
authors: "Anton Bachin <antonbachin@yahoo.com>"
homepage: "https://github.com/aantron/markup.ml"
doc: "http://aantron.github.io/markup.ml"
bug-reports: "https://github.com/aantron/markup.ml/issues"
dev-repo: "https://github.com/aantron/markup.ml.git"
license: "BSD"

depends: [
  "base-unix"
  "dune" {build}
  "lwt"
  "markup"
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
