opam-version: "1.2"
version: "dev"

maintainer: "Anton Bachin <antonbachin@yahoo.com>"
authors: "Anton Bachin <antonbachin@yahoo.com>"
homepage: "https://github.com/aantron/markup.ml"
doc: "http://aantron.github.io/markup.ml"
bug-reports: "https://github.com/aantron/markup.ml/issues"
dev-repo: "https://github.com/aantron/markup.ml.git"
license: "BSD"

depends: [
  "ocamlbuild" {build}
  "ocamlfind" {build}
  "ounit" {test}
  "uchar"
  "uutf" {>= "1.0.0"}
]
depopts: [
  "lwt"
]

build: [
  [make "build"]
]
build-test: [
  [make "test"]
]
build-doc: [
  [make "docs"]
]

install: [make "ocamlfind-install"]
remove: ["ocamlfind" "remove" "markup"]
