(* -*- tuareg -*- *)

let preprocess =
  match Sys.getenv "BISECT_ENABLE" with
  | "yes" -> "(preprocess (pps bisect_ppx))"
  | _ -> ""
  | exception Not_found -> ""

let () = Jbuild_plugin.V1.send @@ {|

(library
 (name markup_lwt)
 (public_name markup-lwt)
 (synopsis "Lwt support for Markup.ml")
 |} ^ preprocess ^ {|
 (libraries lwt markup)
 (flags (:standard -w +A-4-9-44-48 -warn-error -3-4-9-44-48 -safe-string)))

|}
